<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/modus"
    tools:context=".ModusActivity" >
    
    <TextView
        android:id="@+id/hd_geraete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/spielmodus_waehlen"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn_einspieler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_mehrspieler"
        android:layout_below="@+id/hd_geraete"
        android:layout_marginTop="30dp"
        android:enabled="false"
        android:text="@string/einspieler"
        android:textAppearance="?android:attr/textAppearanceButton" />

    <Button
        android:id="@+id/btn_mehrspieler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hd_geraete"
        android:layout_below="@+id/btn_einspieler"
        android:layout_marginTop="30dp"
        android:text="@string/mehrspieler"
        android:textAppearance="?android:attr/textAppearanceButton" />

</RelativeLayout>