<com.dhbw.dvst.views.SpielerAnlegenView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spielfigur"
    android:background="@color/lightblue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.SpielerActivity" >
	
<RelativeLayout 
    android:id="@+id/spieler_anlegen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <TextView
        android:id="@+id/hd_spieler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left_main"
        android:layout_marginTop="@dimen/margin_top_main"
        android:text="@string/spieler_erstellen"
        android:textAppearance="?android:attr/textAppearance" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hd_spieler"
        android:layout_below="@+id/hd_spieler"
        android:layout_marginTop="@dimen/margin_top_large"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <EditText 
        android:id="@+id/et_name" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_toRightOf="@+id/textView1" 
        android:layout_alignBaseline="@+id/textView1"
        android:layout_marginLeft="@dimen/margin_left_main"
        android:ems="10" 
        android:inputType="none"/>
    
    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="@dimen/margin_top_large"
        android:text="@string/farbe"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />
    
    <Spinner android:id="@+id/spin_farbe" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_alignLeft="@+id/et_name" 
        android:layout_alignRight="@+id/et_name" 
        android:layout_alignTop="@+id/TextView2"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView2"
        android:layout_below="@+id/TextView2"
        android:layout_marginTop="@dimen/margin_top_large"
        android:text="@string/figur"
        android:textColor="@color/black" />
    
    <Spinner 
        android:id="@+id/spin_figur" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_alignLeft="@+id/et_name" 
        android:layout_alignRight="@+id/et_name"
        android:layout_alignTop="@+id/textView3" 
        android:keepScreenOn="true" 
        android:textAlignment="center"/>
    
    <Button
        android:id="@+id/btn_erstellen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="@dimen/margin_top_large"
        android:text="@string/OK" />   

    
</RelativeLayout>
</com.dhbw.dvst.views.SpielerAnlegenView>